--- a/numpy/15_shuffle_unique_resize_flatten_reval.ipynb
+++ b/numpy/15_shuffle_unique_resize_flatten_reval.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4 5 6 1 3]\n"
+      "[5 1 3 6 4]\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "511e54f8-4169-4874-aa7b-c272900ec895",
    "metadata": {},
    "outputs": [
@@ -47,13 +47,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([ 2,  3,  4,  5,  6, 34]), array([2, 7, 0, 1, 5, 8], dtype=int64), array([1, 2, 2, 4, 2, 2], dtype=int64))\n"
+      "[ 2  3  4  5  6 34]\n"
      ]
     }
    ],
    "source": [
     "var2=np.array([4,5,2,4,5,6,6,3,34,5,5,34,3])\n",
-    "x=np.unique(var2,return_index=True,return_counts=True)\n",
+    "# x=np.unique(var2,return_index=True,return_counts=True)\n",
+    "x=np.unique(var2)\n",
     "print(x)"
    ]
   },
